Issue #107: CI is enforced over java code to demand basic code quality